@@ -2,7 +2,8 @@ package TestSchema::ResultSet::Gnarly;
 use strict;
 use warnings;
 
-use parent 'TestSchema::ResultSet';
+# intentionally not using TestSchema::ResultSet
+use parent 'DBIx::Class::ResultSet';
 
 __PACKAGE__->load_components(qw{ Helper::ResultSet::Me Helper::ResultSet::ResultClassDWIM Helper::ResultSet::CorrelateRelationship Helper::ResultSet::SearchOr Helper::ResultSet::NoColumns });
 
